# edgarfacts

./: LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
docu/: internal-maintenance.md  public-api.md
src/edgarfacts/: __init__.py  edgarfacts.py  fetching.py  logging_utils.py
src/edgarfacts/extract/: __init__.py  facts_companyfacts.py  periods.py  pipeline.py  submissions_bulk.py  submissions_fsd.py  tags.py  tickers.py
src/edgarfacts/transforms/: __init__.py  amendments.py  config.py  figures.py  outliers.py  periods.py
src/edgarfacts/transforms/compute/: __init__.py  arcs_apply.py  companyfacts.py
src/edgarfacts/transforms/pivotize/: __init__.py  pivotize.py
src/edgarfacts/transforms/taxonomy/: __init__.py  calcs.py  io.py  paths.py  reader.py
src/edgarfacts/validation/: __init__.py  checks.py
tests/: test_compute.py  test_pivotize.py  test_taxonomy.py  test_transforms_root.py
